tests/compile_fail/ktstr_test_numa_nodes_zero.rs
use ktstr::ktstr_test;

#[ktstr_test(numa_nodes = 0)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
